change icon for week

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -217,7 +217,8 @@ $(function() {
    <div style="float:left;">
     <div class="dropdown" style="float:left;">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fa fa-calendar"></i>
+<!--         <i class="fa fa-calendar"></i> -->
+        <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
       </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
