--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -140,7 +140,7 @@
     }
     /* Start saved list css */
     .listOverlay {
-      padding: 3px;
+      margin: 15px;
       border-radius: 4px;
       position: fixed;
       display: none;
