hide scrollbar on chrome

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -47,6 +47,9 @@
           z-index: 1;
           position: relative;
       }
+    ::-webkit-scrollbar { 
+        display: none; 
+    }
     .slidecontainer {
         margin: 0 auto;
         width: 350px;
