adjust search bar

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -255,8 +255,8 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; margin: auto; padding-right: 10px; padding-bottom: 14px">
-    <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776;</span>
+  <div style="float: right; padding-right: 10px;">
+    <span style="font-size:30px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
 
