--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -71,6 +71,8 @@
     }
     .dropdown-menu{
       background-color:	#f9f9f9;
+      padding-left: 10px;
+      width: 80px;
     }
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
@@ -223,7 +225,7 @@ $(function() {
 <!--         <i class="fa fa-calendar"></i> -->
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
       </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <div id="dropdown-menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
           <input name = "M" value = "M" type="checkbox">
           <span class="slider"> Monday </span>
