--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -66,6 +66,7 @@
       float: right;
       z-index: 2;
       padding-top: 1%;
+      padding-bottom: 1%;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
       pointer-events: auto;
     }
