--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -198,7 +198,7 @@ $(function() {
 </script>
 
   <div id="map"></div>
-
+<!-- Overlay div begins -->
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
      <a href="https://classmaps.herokuapp.com">
@@ -258,7 +258,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; padding-right: 10px;">
+  <div style="float: right; padding-right: 10px; position: fixed; top: 0; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
