--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -66,7 +66,7 @@
       float: right;
       z-index: 2;
       padding-top: 1%;
-      padding-bottom: 1%;
+      padding-bottom: 0.6%;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
       pointer-events: auto;
     }
@@ -258,7 +258,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; padding-right: 10px; position: fixed; top: 0; right: 0;">
+  <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
