--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -323,10 +323,10 @@ $(function() {
 <!-- sidenav script  -->
 <script>
   function openHelp() {
-      document.getElementById("sideOverlay").style.display = "block";
+      document.getElementById("helpOverlay").style.display = "block";
   }
   function closeHelp() {
-      document.getElementById("sideOverlay").style.display = "none";
+      document.getElementById("helpOverlay").style.display = "none";
   }
   function openNav() {
       document.getElementById("sideOverlay").style.display = "block";
