--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -111,23 +111,19 @@
     }
     /* Start help overlay css */
     .helpOverlay {
-      position:absolute;
-       top:50%;
-       left:50%;
-       z-index:1002;
-       overflow:auto;
-       width:400px;
-       height:400px;
-       margin-left:-200px;
-       margin-top:-200px;
+      position: fixed;
       display: none;
-      width: 0;
+      width: 100%;
       height: 100%;
+      top: 0;
+      left: 1;
+      right: 0;
+      bottom: 0;
       background-color: #d3d3d3;
-      border-radius: 4px;
       z-index: 3;
       cursor: pointer;
       transition: 0.5s;
+      padding: 60px;
     }
     /* Start sidebar css */
     .sideOverlay {
