--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -119,7 +119,7 @@
       left: 1;
       right: 0;
       bottom: 0;
-      background-color: #d3d3d3;
+      background-color: rgba(211,211,211,0.4);
       z-index: 3;
       cursor: pointer;
       transition: 0.5s;
@@ -313,7 +313,7 @@ $(function() {
 <!--  Code for help overlay  -->
    <div id="helpOverlay" class="helpOverlay" style="overflow: auto;">
      <h3>Help</h3>
-     <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;</a>
+     <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
      This is the help overlay
    </div>
 <!-- sidenav script  -->
