close sidebar when help open

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -320,6 +320,8 @@ $(function() {
 <script>
   function openHelp() {
       document.getElementById("helpOverlay").style.display = "block";
+     document.getElementById("sideOverlay").style.width = "0";
+      document.getElementById("sideOverlay").style.display = "none";
   }
   function closeHelp() {
       document.getElementById("helpOverlay").style.display = "none";
