--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,6 +59,8 @@
       padding: 5px
     }
     .overlay {
+      margin: 10px;
+      border-radius: 4px;
       height: auto;
       width: 100%;
       margin-left: -100%;
