--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -63,8 +63,9 @@
       border-radius: 4px;
       height: auto;
       width: 100%;
-      margin-left: -100%;
-      position: relative;
+/*       margin-left: -100%; */
+/*       position: relative; */
+      position: fixed;
       float: right;
       z-index: 2;
       padding-top: 1%;
