--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -62,7 +62,7 @@
       margin: 9px;
       border-radius: 4px;
       height: auto;
-      width: 98%;
+      width: auto;
 /*       margin-left: -100%; */
 /*       position: relative; */
       position: fixed;
