--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,10 +59,10 @@
       padding: 5px
     }
     .overlay {
-      margin: 9px;
+      margin-top: 9px;
       border-radius: 4px;
       height: auto;
-      width: 100% - 18px;
+      width: 100%;
 /*       margin-left: -100%; */
 /*       position: relative; */
       position: fixed;
