--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,10 +59,11 @@
       padding: 5px
     }
     .overlay {
-      margin-top: 9px;
+      margin: 9px;
       border-radius: 4px;
       height: auto;
       width: 100%;
+      overflow: auto;
 /*       margin-left: -100%; */
 /*       position: relative; */
       position: fixed;
