--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -59,18 +59,13 @@
       padding: 5px
     }
     .overlay {
-      margin: 9px;
-      border-radius: 4px;
       height: auto;
-      width: 98.5%;
-      overflow: auto;
-/*       margin-left: -100%; */
-/*       position: relative; */
-      position: fixed;
+      width: 100%;
+      margin-left: -100%;
+      position: relative;
       float: right;
       z-index: 2;
       padding-top: 1%;
-      padding-bottom: 0.6%;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
       pointer-events: auto;
     }
@@ -146,6 +141,7 @@
       transition: 0.5s;
       padding-top: 60px;
     }
+    
     .sideOverlay a {
       padding: 6px 6px 6px 30px;
       text-decoration: none;
