try adding an x

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -224,7 +224,7 @@ $(function() {
 
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
 
-    <div style="width:30%; float:left; padding-right: 10px;">
+    <div style="width:30%; float:left;">
         <input id = "search" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
 
@@ -234,6 +234,7 @@ $(function() {
           <span class="glyphicon glyphicon-time"></span>
         </span> -->
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
+        <input type="text" placeholder="X">
       </div>
     </div>
 
