--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -234,10 +234,9 @@ $(function() {
           <span class="glyphicon glyphicon-time"></span>
         </span> -->
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
-        <input type="text" placeholder="X">
       </div>
     </div>
-
+    <input type="text" placeholder="x">
    <div style="float:left;">
     <div class="dropdown" style="float:left;">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
