--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -228,7 +228,7 @@ $(function() {
         <input id = "search" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
 
-    <div style="width:85px; float:left; padding-right: 10px;">
+    <div style="width:85px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
@@ -236,7 +236,11 @@ $(function() {
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white; cursor: pointer;" onfocus="this.blur()" readonly>
       </div>
     </div>
+      
+   <div style="width:auto; float:left; padding-right: 10px;">
     <input type="text" placeholder="x">
+   </div>
+      
    <div style="float:left;">
     <div class="dropdown" style="float:left;">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
