diff close button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -236,7 +236,7 @@ $(function() {
     </div>
       
    <div style="width:30px; float:left; padding-right: 10px;" onclick="clearForm()">
-    <input type="text" style="color: white; cursor: pointer;" placeholder="x" readonly>
+    <input type="text" style="color: white; cursor: pointer;" placeholder="&times;" readonly>
    </div>
       
    <div style="float:left;">
