--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -305,9 +305,9 @@ $(function() {
 <!--  Code for sidebar overlay  -->
    <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a>Welcome, {{netid}}</a>
+    <a style="pointer-events: none;"> Welcome, {{netid}}</a>
     <a href="https://andsylin.github.io/" target="_blank">About</a>
-    <a href="#" onclick="openHelp()">Help</a>
+    <a onclick="openHelp()">Help</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
     <a href="https://andsylin.github.io/members/" target="_blank">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
