--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -85,16 +85,13 @@
         background-color: #3e8e41;
     }
     ::placeholder {
-      padding-right: 10px;
       color: #d3d3d3;
       opacity: 1; /* Firefox */
     }
     :-ms-input-placeholder { /* Internet Explorer 10-11 */
-      padding-right: 10px;
        color: #d3d3d3;
     }
     ::-ms-input-placeholder { /* Microsoft Edge */
-      padding-right: 10px;
        color: #d3d3d3;
     }
     input, select, textarea {
@@ -199,6 +196,9 @@
       max-width: 40%;
       overflow-y: auto;
       font-size: small;
+    }
+    .search{
+      padding-right: 10px;
     }
   </style>
 </head>
