--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -226,7 +226,7 @@ $(function() {
         <input id = "search" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
     <div style="width:10px; float:left;">
-      <input type="text" style="color: white; cursor: pointer;" placeholder="" readonly>
+      <input type="text" style="color: white;" placeholder="" readonly>
    </div>
     <div style="width:80px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
@@ -237,7 +237,7 @@ $(function() {
       </div>
     </div>
       
-   <div style="width:30px; float:left; padding-right: 10px;" onclick="clearForm()">
+   <div style="width:25px; float:left; padding-right: 10px;" onclick="clearForm()">
     <input type="text" style="color: white; cursor: pointer;" placeholder="&times;" readonly>
    </div>
       
