--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -123,7 +123,7 @@
       z-index: 3;
       cursor: pointer;
       transition: 0.5s;
-      padding: 60px;
+      padding: 30%;
     }
     /* Start sidebar css */
     .sideOverlay {
