--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -228,7 +228,7 @@ $(function() {
     <div style="width:10px; float:left;">
       <input type="text" style="color: white;" placeholder="" readonly>
    </div>
-    <div style="width:65px; float:left;">
+    <div style="width:70px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
@@ -279,7 +279,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
+  <div style="float: right; padding-right: 10px;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
