--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -67,7 +67,7 @@
       z-index: 2;
       padding-top: 1%;
       padding-bottom: 0.5%;
-      padding-right: 10px;
+      padding-right: 50px;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
       pointer-events: auto;
     }
@@ -280,7 +280,7 @@ $(function() {
     </div>
   </form>
 
-  <div style="float: right; padding-right: 0;">
+  <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
   </div>
  </div>
