--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -67,7 +67,8 @@
       z-index: 2;
       padding-top: 1%;
       padding-bottom: 0.5%;
-      padding-right: 50px;
+      padding-right: 45px;
+      padding-left: 10px;
       background-color:rgba(0,0,0,0.6); // Sets to 50% transparent;
       pointer-events: auto;
     }
@@ -220,7 +221,7 @@ $(function() {
   <div id="overlay" class="overlay">
     <form id="searchbar" method="GET" action="{% url 'classes:search' %}">
      <a href="https://classmaps.herokuapp.com">
-     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left;" hspace="10">
+     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left; margin-right:10px">
      </a>
 
     <div style="width:30%; float:left;">
@@ -243,7 +244,7 @@ $(function() {
    </div>
       
    <div style="float:left;">
-    <div class="dropdown" style="float:left;">
+    <div class="dropdown" style="float:left; padding-right: 10px; ">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 <!--         <i class="fa fa-calendar"></i> -->
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
@@ -273,7 +274,7 @@ $(function() {
     </div>
     </div>
 
-    <div style="float:left; padding-left: 10px; padding-right: 10px;">
+    <div style="float:left; padding-right: 10px;">
       <button class="btn btn-success" type="submit">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
