--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -231,7 +231,7 @@ $(function() {
       <input type="text" style="color: white;" placeholder="" readonly>
    </div>
     <div style="width:70px; float:left;">
-      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
+      <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span> -->
