--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -228,9 +228,9 @@ $(function() {
         <input id = "search" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
     <div style="width:10px; float:left;">
-      <input type="text" style="color: white;" placeholder="" readonly>
+      <input style="color: white;" placeholder="" readonly>
    </div>
-    <div style="width:70px; float:left;">
+    <div style="width:74px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="left" data-align="top" data-autoclose="false">
 <!--         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
