--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -321,7 +321,7 @@ $(function() {
    <div id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
      <h3>Help</h3>
      <a href="javascript:void(0)" class="closebtn" onclick="closeHelp()">&times;CLOSE</a>
-     This is the help overlay
+     This is the help overlay. (This part has yet to be completed, sorry.)
    </div>
 <!-- sidenav script  -->
 <script>
