--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -31,6 +31,16 @@
 
 
 <head bgcolor="#000000">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118677193-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118677193-1');
+</script>
+  
   <title>ClassMaps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
