--- a/classes/templates/classes/layout.html
+++ b/classes/templates/classes/layout.html
@@ -26,6 +26,14 @@
     <meta name="theme-color" content="#ffffff">
     <title>ClassMaps</title>
 </head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118677193-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-118677193-1');
+</script>
 <body bgcolor="#444444">
         {% block content %}
         {% endblock %}
