--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -330,7 +330,7 @@ function convertBool(b) {
    <table id="myTable" class="table order-list">
    <thead>
        <tr>
-           <td><div class="listTitle"><i class="fa fa-star">Favorites</i>ss</div></td>
+           <td><div class="listTitle"><i class="fa fa-star"></i>Favorites</div></td>
        </tr>
    </thead>
    <tfoot>
