--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -312,7 +312,9 @@ function convertBool(b) {
     </div>
 
     <div style="float:left; padding-right: 10px;">
-      <button type="submit"></button>
+      <button class="btn btn-success" type="submit">
+        <i class="fa fa-search"></i>Search ClassMaps
+      </button>
     </div>
   </form>
 
