--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -283,7 +283,6 @@ function convertBool(b) {
    <div style="float:left;">
     <div class="dropdown" style="float:left; padding-right: 10px; ">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<!--         <i class="fa fa-calendar"></i> -->
         <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
       </button>
     <div id="dropdown-menu" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -320,6 +319,9 @@ function convertBool(b) {
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <img src="{% static 'classes/images/weekicon.png'%}" alt="Day of Week" style="width:20px;">
+      </button>
   </div>
  </div>
 
