--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -209,35 +209,6 @@
       overflow-y: auto;
       font-size: small;
     }
-    /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-}
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
   </style>
 </head>
 
@@ -336,7 +307,7 @@ function convertBool(b) {
           <span class="slider"> Friday </span>
         </label>
         </div>
-    </div>
+      </div>
     </div>
 
     <div style="float:left; padding-right: 10px;">
@@ -346,17 +317,8 @@ function convertBool(b) {
     </div>
   </form>
 
-  <div class="dropdown" style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
-<!--     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span> -->
-    <span id = "menutoggle" style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="myFunction()">&#9776;</span>
-       <div id="myDropdown" class="dropdown-content">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-        <a href="https://andsylin.github.io/" target="_blank">About</a>
-        <a onclick="openHelp()">Help</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
-        <a href="https://andsylin.github.io/members/" target="_blank">Contact</a>
-        <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
+  <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
+    <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
       </div>
   </div>
  </div>
@@ -403,24 +365,6 @@ function convertBool(b) {
   
   /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
-function myFunction() {
-    document.getElementById("myDropdown").classList.toggle("show");
-}
-// Close the dropdown menu if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-
   function clearForm() {
     console.log("cleared form");
     document.getElementById("searchbar").reset();
