how does this look

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -142,7 +142,7 @@
       position: fixed;
       display: none;
       width: 0;
-      height: 100%;
+      height: auto;
       top: 0;
       left: 1;
       right: 0;
@@ -154,7 +154,6 @@
       transition: 0.5s;
       padding-top: 60px;
     }
-
     .sideOverlay a {
       padding: 6px 6px 6px 30px;
       text-decoration: none;
