--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -142,7 +142,7 @@
       position: fixed;
       display: none;
       width: 0;
-      height: auto;
+      height: 40%;
       top: 0;
       left: 1;
       right: 0;
