--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -142,7 +142,7 @@
       position: fixed;
       display: none;
       width: 0;
-      height: 40%;
+      height: 100%;
       top: 0;
       left: 1;
       right: 0;
@@ -351,6 +351,12 @@ function convertBool(b) {
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank">Feedback</a>
     <a href="https://andsylin.github.io/members/" target="_blank">Contact</a>
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
+      <footer>
+        <p>To add the site to your phone's homescreen, open the <a href="/">homepage</a></p>
+        <p>On iPhone, click the <img height="24" src="{% static 'classes/images/action.png' %}"> button on the bottom of Safari</p>
+        <p>On Android, click on the <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span> button on the top right of Chrome</p>
+        <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icon/favicon-32x32.png' %}"/></p>
+      </footer>
   </div>
 
 <!--  Code for help overlay  -->
