--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -353,10 +353,10 @@ function convertBool(b) {
     <a href="https://classmaps.herokuapp.com/accounts/logout">Sign Out</a>
      
       <footer style="font-size: 12px; padding: 10px; position: absolute; bottom: 0; right: 0;">
-        <p>To add the site to your phone's homescreen, open the <a style="padding: 0; font-size: 12px;" href="/">homepage</a></p>
+        <p>To add the site to your phone's homescreen, open the <a style="padding: 0; font-size: 12px; font-color: blue;" href="/">homepage</a></p>
         <p>On iPhone, click the <img height="24" src="{% static 'classes/images/action.png' %}"> button on the bottom of Safari</p>
         <p>On Android, click on the <img src="{% static 'classes/images/3dot.png' %}"/> button on the top right of Chrome</p>
-        <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icons/favicon-16x16.png' %}"/></p>
+        <p>Click "Add to Home Screen" <img src="{% static 'classes/images/icons/24x24.png' %}"/></p>
       </footer>
   </div>
 
