get rid of button?

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -255,7 +255,7 @@ function convertBool(b) {
   <div id="map"></div>
 <!-- Overlay div begins -->
   <div id="overlay" class="overlay">
-    <form id="searchbar" method="GET" action="{% url 'classes:search' %}">
+    <form id="searchbar" name="myform" method="GET" action="{% url 'classes:search' %}">
      <a href="https://classmaps.herokuapp.com">
      <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left; margin-right:10px">
      </a>
@@ -309,12 +309,8 @@ function convertBool(b) {
       </div>
     </div>
 
-    <div style="float:left; padding-right: 10px;">
-      <button class="btn btn-success" type="submit">
-        <i class="fa fa-search"></i>Search ClassMaps
-      </button>
-    </div>
   </form>
+  <script type="text/javascript">document.myform.submit();</script>
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
