--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -308,9 +308,13 @@ function convertBool(b) {
         </div>
       </div>
     </div>
-
+    <div style="float:left; padding-right: 10px;">
+      <button class="btn btn-success" type="submit">
+        <i class="fa fa-search"></i>Search ClassMaps
+      </button>
+    </div>
   </form>
-  <script type="text/javascript">document.myform.submit();</script>
+
 
   <div style="float: right; padding-right: 10px; position: fixed; top: 10px; right: 0;">
     <span style="font-size:25px;cursor:pointer; color: white; padding-bottom: 7px;" onclick="openNav()">&#9776;</span>
