--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -308,7 +308,7 @@ function convertBool(b) {
    </div>
       
     <div style="float:left; padding-right: 10px;">
-      <button class="btn btn-success" type="submit">
+      <button class="btn btn-success" type="submit" style="display:none">
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
     </div>
